# tense

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  taskfile.yml
bench/: CMakeLists.txt
tense/: tense.hpp
test/: CMakeLists.txt  test.cpp
